test/pass/enums_and_variants/variant_assign_to_property.lly
enum Option[A] { Some(A) None }

class test() {
    var @v = None
}

var v = test::new()
v.v = Some(1)
