test/fail/enums_and_variants/wrong_arg_count_too_few.lly
#[
SyntaxError: Wrong number of arguments to Some (none for 1).
    from wrong_arg_count_too_few.lly:6:
]#

var v = Some
